--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         <div class="subheading mb-5">Cond. Alto Boa Vista, QD 105, CJ 01, CS 22, Brasília-DF 93130-900 · (+55) (61)92771436 ·
           <a href="mailto:name@email.com">walfredo.carneiro@gmail.com</a>
         </div>
-        <p class="lead mb-5">I am experienced in leveraging agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.</p>
+        <p class="lead mb-5">I have a history full of achievements, a wonderful family and a constant desire for new opportunities for learning and professional growth.</p>
         <div class="social-icons">
           <a href="https://github.com/walfredocarneiro">
             <i class="fab fa-linkedin-in"></i>
